--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html><head><style>html{background-color:#000000;color:#FFFFF}</style>
+<html><head><style>body{background-color:#000000;color:#FFFFF}</style>
 		<meta charset="UTF-8">
         <title> Sites </title>
     </head>
