--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html><head><style>body{background-color:#000000;color:#FFFFF}</style>
+<html><head>
 		<meta charset="UTF-8">
         <title> Sites </title>
     </head>
+	<style>body{background-color:#000000;color:#FFFFF}</style>
     <body>
         <h1> Sites </h1>
       <h1>Its All About You Kay</h1>
