--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 		<meta charset="UTF-8">
         <title> Sites </title>
     </head>
-	<style>body{background-color:#000000;color:#FFFFF}</style>
+	<style>html
+		{ background-color:#000000; color:#FFFFF;
+		}</style>
     <body>
         <h1> Sites </h1>
       <h1>Its All About You Kay</h1>
