--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <html><head>
 		<meta charset="UTF-8">
         <title> Sites </title>
+	<style type="text/css">html{overflow-y:scroll}body{background-color:#FFFFF,color:#00000,font-family:Arial,Helvetica}</style>
     </head>
-	<style>html
-		{ background-color:#000000; color:#FFFFF;
-		}</style>
     <body>
         <h1> Sites </h1>
       <h1>Its All About You Kay</h1>
