--- a/inteltechniquesemail.html
+++ b/inteltechniquesemail.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <title>Baby Daddy Husband Jeffy's IntelTechniques Search Tool</title>
-<link href="../bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link href="https://www.dropbox.com/scl/fi/n7l4qjn4ij9fl4uqsvq05/intellBootstrapcss.css?rlkey=67zvzf0izsrqdvq3555eaxmaw&raw=1" rel="stylesheet">
 <link href="../style.css" rel="stylesheet">
 <script>
         (function() {
