--- a/inteltechniquesemail.html
+++ b/inteltechniquesemail.html
@@ -7,7 +7,7 @@
 <meta name="description" content="">
 <title>Baby Daddy Husband Jeffy's IntelTechniques Search Tool</title>
 <link href="https://www.dropbox.com/scl/fi/n7l4qjn4ij9fl4uqsvq05/intellBootstrapcss.css?rlkey=67zvzf0izsrqdvq3555eaxmaw&raw=1" rel="stylesheet">
-<link href="../style.css" rel="stylesheet">
+<link href="https://www.dropbox.com/scl/fi/29casqvzocihmx2knk8cc/inteltecneqstyle.css?rlkey=wzsjz6gd1gobdchw8cm4bl0fh&raw=1" rel="stylesheet">
 </head>
 <body>
 <div class="container header">
