--- a/kuku.html
+++ b/kuku.html
@@ -1,5 +1,9 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" dir="ltr">
 <head>
+<meta http-equiv="X-UA-Compatible" content="IE=edge" />
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover" />
 <meta http-equiv="content-language" content="en">
     
 <meta name="referrer" content="origin">
