--- a/ai.code.translator.html
+++ b/ai.code.translator.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html dir="auto">
 <head>
+  <script async src="https://tag.clearbitscripts.com/v1/pk_6c98e3a32cc93f1fc857d677648d35cd/tags.js" referrerpolicy="strict-origin-when-cross-origin"></script>
   <meta property="og:url" content="https://ai-code-translator.vercel.app">
   <meta property="og:type" content="chatgpt">
   <meta charset="utf-8">
