--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<style type="text/css">html{overflow-y:scroll}body{background-color:#FFFFF,color:#00000,font-family:Arial,Helvetica}</style>
     </head>
     <body>
+          <script src="https://cdnjs.cloudflare.com/ajax/libs/Darkmode.js/1.5.7/darkmode-js.min.js"></script>
         <h1> Sites </h1>
       <h1>Its All About You Kay</h1>
         <ul>
