--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     </head>
     <body>
           <script src="https://cdnjs.cloudflare.com/ajax/libs/Darkmode.js/1.5.7/darkmode-js.min.js"></script>
+         <script>
+      function addDarkmodeWidget() {
+        new Darkmode({ label: "ð" }).showWidget();
+      }
+      window.addEventListener("load", addDarkmodeWidget);
+    </script>
         <h1> Sites </h1>
       <h1>Its All About You Kay</h1>
         <ul>
