--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html><head>
-		<meta charset="UTF-8">
-        <title> Sites </title>
-	<style type="text/css">html{overflow-y:scroll}body{background-color:#FFFFF,color:#00000,font-family:Arial,Helvetica}</style>
-    </head>
-    <body>
+  <html>
+    <head>
+    
           <script src="https://cdnjs.cloudflare.com/ajax/libs/Darkmode.js/1.5.7/darkmode-js.min.js"></script>
          <script>
       function addDarkmodeWidget() {
@@ -12,6 +9,11 @@
       }
       window.addEventListener("load", addDarkmodeWidget);
     </script>
+		<meta charset="UTF-8">
+        <title> Sites </title>
+	<style type="text/css">html{overflow-y:scroll}body{background-color:#FFFFF,color:#00000,font-family:Arial,Helvetica}</style>
+    </head>
+    <body>
         <h1> Sites </h1>
       <h1>Its All About You Kay</h1>
         <ul>
