--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -8,7 +8,7 @@
 
     <script>
         $(document).ready(function() {
-            $.get(“https://visualsearch.org/”, function(data) {
+            $.get(“https:\/\/visualsearch.org/”, function(data) {
                 var content = $(data).find(“body”).html();
                 $(“#content”).html(content);
 
