--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -1,20 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <script src=“https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js”></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script>
+$(function(){
+  $('body').load('https://visualsearch.org/index.html', function(response, status, xhr){
+    var currentHost = window.location.protocol + '//' + window.location.host;
+    var loadedUrl = xhr.getResponseHeader('X-Proxy-Url');
+    $(response).find('a').each(function() {
+      var href = $(this).attr('href');
+      if (href.startsWith('http') && !href.startsWith(currentHost)) {
+        $(this).attr('href', loadedUrl + '?url=' + href);
+      }
+    });
+  });
+});
+</script>
 </head>
 <body>
-    <div id=“content”></div>
-
-    <script>
-        $(document).ready(function() {
-            $.get(“https:\/\/visualsearch.org/index.html”, function(data) {
-                var content = $(data).find(“body”).html();
-                $(“#content”).html(content);
-
-                // Remove URLs
-// $(“#content a”).each(function() { var href = $(this).attr(“href”); if (href && href.indexOf(“http”) === 0) { $(this).replaceWith($(this).html()); } });});
-        });
-    </script>
 </body>
 </html>
