--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <!-- In the parent window -->
-<iframe id="myIframe" src="https://visualsearch.org"></iframe>
+<iframe src="https://visualsearch.org" width="800" height="1000"></iframe>
 <script>
     var iframe = document.getElementById('myIframe');
 
