--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <!-- In the parent window -->
-<iframe src="https://visualsearch.org" width="99%" height="99%"></iframe>
+<iframe src="https://visualsearch.org" frameborder="0"  seamless="seamless"></iframe>
 <script>
     var iframe = document.getElementById('myIframe');
 
