--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -5,14 +5,10 @@
 </head>
 <body>
    <!-- In the parent window -->
-   <frameset rows="100%,*">
+   <style> body {
+    margin: 0;
+}</style>
         <frame src="https://visualsearch.org">
-        <noframes>
-            <body>
-                Your browser does not support frames. To wiew this page please use supporting browsers.
-            </body>
-        </noframes>
-    </frameset>
 <script>
     var iframe = document.getElementById('myIframe');
 
