--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -5,10 +5,9 @@
 </head>
 <body>
    <!-- In the parent window -->
-   <style> body {
+        <frame src="https://visualsearch.org">body {
     margin: 0;
-}</style>
-        <frame src="https://visualsearch.org">
+}</iframe>
 <script>
     var iframe = document.getElementById('myIframe');
 
