--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -5,9 +5,9 @@
 </head>
 <body>
    <!-- In the parent window -->
-        <frame src="https://visualsearch.org">body {
+        <frame src="https://visualsearch.org" body {
     margin: 0;
-}</iframe>
+}></iframe>
 <script>
     var iframe = document.getElementById('myIframe');
 
