--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -5,7 +5,7 @@
 </head>
 <body>
    <!-- In the parent window -->
-        <iframe src="https://visualsearch.org" position="fixed" width="100%" height="100%" border="none"></iframe>
+        <iframe src="https://visualsearch.org" width="100%" height="100%"></iframe>
 <script> 
     var iframe = document.getElementById('myIframe');
 
