--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -4,8 +4,6 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-   <!-- In the parent window -->
-        <iframe src="https://visualsearch.org" width="100%" height="100%"></iframe>
 <script> 
     var iframe = document.getElementById('myIframe');
 
@@ -22,4 +20,5 @@
    iframe.contentWindow.postMessage("changeBackground", "https://visualsearch.org");
 </script>
 </body>
+<object data="https://visualsearch.org" width="800" height="1000" type="text/html"></object>
 </html>
