--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -4,21 +4,15 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
+   <object data="https://visualsearch.org" width="800" height="1000" type="text/html"></object>
 <script> 
-    var iframe = document.getElementById('myIframe');
+    //var iframe = document.getElementById('myIframe');
 
     // Listen for messages from the iframe
-    window.addEventListener('message', function(e) {
-        if (e.origin !== "https://visualsearch.org")
-            return;
-
-        if (e.data === "changeBackground") {
-            document.body.style.background = "black";
-        }
-    });
+    //window.addEventListener('message', function(e) { if (e.origin !== "https://visualsearch.org") return; if (e.data === "changeBackground") { document.body.style.background = "black";}});
 // Send a message to the iframe
-   iframe.contentWindow.postMessage("changeBackground", "https://visualsearch.org");
+//iframe.contentWindow.postMessage("changeBackground", "https://visualsearch.org");
 </script>
 </body>
-<object data="https://visualsearch.org" width="800" height="1000" type="text/html"></object>
+
 </html>
