--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -4,7 +4,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
-   <object data="https://visualsearch.org" width="device-width" height="device-height" type="text/html"></object>
+   <object data="https://visualsearch.org" type="text/html"></object>
 <script> 
     //var iframe = document.getElementById('myIframe');
 
