--- a/AiSearchtool.html
+++ b/AiSearchtool.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <style>width="device-width" height="device-height"</style>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 <body>
