--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
   <html>
     <head>
+      <meta name="msvalidate.01" content="D25FBA2BF7AE061D5AC95BF3C3AEC75E" />
     
           <script src="https://cdnjs.cloudflare.com/ajax/libs/Darkmode.js/1.5.7/darkmode-js.min.js"></script>
          <script>
