--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
   <html>
+		<meta name="google-site-verification" content="f3qZxfu3-vjZ9c_JNfwWDrm9rXcXKwmLuuEGq0XwfIA" />
 	  <head>
 	    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
       <meta name="msvalidate.01" content="D25FBA2BF7AE061D5AC95BF3C3AEC75E" />
