--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
-  <html>
-		<meta name="google-site-verification" content="f3qZxfu3-vjZ9c_JNfwWDrm9rXcXKwmLuuEGq0XwfIA" />
-	  <head>
-	    <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
-      <meta name="msvalidate.01" content="D25FBA2BF7AE061D5AC95BF3C3AEC75E" />
+  <html><head>
+  <meta name="google-site-verification" content="f3qZxfu3-vjZ9c_JNfwWDrm9rXcXKwmLuuEGq0XwfIA" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,minimum-scale=1.0,user-scalable=no">
+  <meta name="msvalidate.01" content="D25FBA2BF7AE061D5AC95BF3C3AEC75E" />
 	      <script type="text/javascrip" src="https://www.dropbox.com/scl/fi/anwvpeyscpa3weinf4bqj/MultipleSearchEngines.js?rlkey=pfw5f0g2uawj1ko876zhyqj0y&raw=1"></script>    
           <script src="https://cdnjs.cloudflare.com/ajax/libs/Darkmode.js/1.5.7/darkmode-js.min.js"></script>
          <script>
