--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <body>
         <h1> Sites </h1>
         <ul>
-  <li><a id=http://customgpt-streamlit.s3.amazonaws.com/customgpt-streamlit/f2b84554-72f0-427f-a996-7ea6b51ec813.xml" href="http://customgpt-streamlit.s3.amazonaws.com/customgpt-streamlit/f2b84554-72f0-427f-a996-7ea6b51ec813.xml"> XML SiteMaps</a></li>
+  <li><a id=https://github.com/jimjonesbabyfreshout/github.io/blob/e29d1dbf46267a4f19c32b80a1bd2ecde06b1d9a/GithubioSitemap.xml" href="https://github.com/jimjonesbabyfreshout/github.io/blob/e29d1dbf46267a4f19c32b80a1bd2ecde06b1d9a/GithubioSitemap.xml"> XML SiteMaps</a></li>
             <li><a id="https://speechify.com/sitemap_index.xml" href="sitemap_index.xml.html"> XML Sitemap - Speechify </a></li>
             <li><a id="https://speechify.com/ai-voice-actor/?landing_url=https:%2F%2Fspeechify.com%2Fai-voice-actor%2F" href="ai-voice-actor/index_landing_url=https___speechify.com_ai-voice-actor_.html"> The Best AI Voice Actor | Speechify </a></li>            
             <li><a id="https://jimjonesbabyfreshout.github.io/github.io/jefestwistedshit.html" href="https://jimjonesbabyfreshout.github.io/github.io/jefestwistedshit.html">JefesTwisted-Shit</a></li>
