--- a/Amfibia.html
+++ b/Amfibia.html
@@ -22,11 +22,11 @@ obj.onload = function() {
   }); };</script>
         <object data="https://kimcartoon.li/Cartoon/Amphibia/" width="800" height="1000" type="text/html"></object>
   
-    <!-- <script>
+     <script>
         window.onload = function() {
-            fetch('https://kimcartoon.li/Cartoon/Amphibia/')
-                .then(response => response.text())
-                .then(html => {
+            // fetch('https://kimcartoon.li/Cartoon/Amphibia/')
+              //  .then(response => response.text())
+                //  .then(html => {
                     const parser = new DOMParser();
                     const doc = parser.parseFromString(html, 'text/html');
 
@@ -43,6 +43,6 @@ obj.onload = function() {
                     document.body.appendChild(doc.body);
                 });
         };
-    </script> -->
+    </script> 
 </body>
 </html>
