--- a/Amfibia.html
+++ b/Amfibia.html
@@ -31,6 +31,6 @@
 </head>
 <body>
   <!-- Embed the Amphibia video from KimCartoon.li -->
-  <iframe src="https://kimcartoon.li/Cartoon/Amphibia/" width="100%" height="100%" sandbox="allow-same-origin allow-scripts allow-popups allow-forms"></iframe>
+  <iframe src="https://kimcartoon.li/Cartoon/Amphibia/" width="100%" height="100%" sandbox="allow-same-origin allow-scripts allow-popups allow-forms" referrerpolicy="origin"></iframe>
 </body>
 </html>
