--- a/link-O-Matic.html
+++ b/link-O-Matic.html
@@ -8,7 +8,7 @@
 <style>#advanced_options_container,#result{padding:20px;margin-top:20px;background-color:#222}body{font-family:sans-serif;background-color:#f5f5f5;color:#333}.container{max-width:600px;padding:30px;margin:0 auto}h1{margin-bottom:margin-bottom: 30px}form{display:flex;flex-direction:column;gap:20px}.input-group{display:flex;flex-direction:column;gap:10px}label{margin-bottom:5px}input[type=text],textarea{width:100%;padding:10px;border:1px solid #666;border-radius:4px}textarea{height:200px}.button-group{display:flex;justify-content:flex-end;gap:10px}#advanced_options_container{display:none}#advanced_options_container label{margin-right:10px}#advanced_options_container input[type=checkbox]{margin-right:5px}body.dark-mode{background-color:#121212;color:#fff}input[type=submit]{padding:10px 20px;border:1px solid #ccc;border-radius:4px;color:#fff;cursor:pointer;background-color:#666}</style>
 </head>
 <body class=dark-mode>
-<script>const toggleDarkModeButton=document.getElementById("toggle-dark-mode");toggleDarkModeButton.addEventListener("click",(()=>{document.body.classList.toggle("dark-mode")}))</script>
+<!-- <script>const toggleDarkModeButton=document.getElementById("toggle-dark-mode");toggleDarkModeButton.addEventListener("click",(()=>{document.body.classList.toggle("dark-mode")}))</script> -->
 <button id=toggle-dark-mode>Toggle Dark Mode</button>
 <div class=container>
 <h1>Advanced Relative Link Converter</h1>
