--- a/String_Wizard.html
+++ b/String_Wizard.html
@@ -2,19 +2,16 @@
 <html>
 <head>
   <title>String Sleuth</title>
-<link rel=stylesheet href=style.css>
-<style>#advanced_options_container,#result{padding:20px;margin-top:20px;background-color:#222}body{font-family:sans-serif;background-color:#f5f5f5;color:#333}.container{max-width:600px;padding:30px;margin:0 auto}h1{margin-bottom:margin-bottom: 30px}form{display:flex;flex-direction:column;gap:20px}.input-group{display:flex;flex-direction:column;gap:10px}label{margin-bottom:5px}input[type=text],textarea{width:100%;padding:10px;border:1px solid #666;border-radius:4px}textarea{height:200px}.button-group{display:flex;justify-content:flex-end;gap:10px}#advanced_options_container{display:none}#advanced_options_container label{margin-right:10px}#advanced_options_container input[type=checkbox]{margin-right:5px}body.dark-mode{background-color:#121212;color:#fff}input[type=submit]{padding:10px 20px;border:1px solid #ccc;border-radius:4px;color:#fff;cursor:pointer;background-color:#666}</style>
-<script>const toggleDarkModeButton=document.getElementById("toggle-dark-mode");toggleDarkModeButton.addEventListener("click",(()=>{document.body.classList.toggle("dark-mode")}))</script>
-<button id=toggle-dark-mode>Toggle Dark Mode</button>
-<div class=container><script src="script.min.js"></script>
+  <link rel="stylesheet" href="style.min.css">
+  <script src="script.min.js"></script>
 </head>
-<body class=dark-mode>
+<body>
   <div class="container">
     <h1>String Sleuth</h1>
     <form id="form">
       <div class="input-group">
         <label for="base_url">Base URL:</label>
-        <input type="text" id="base_url">
+        <input id="base_url">
       </div>
       <div class="input-group">
         <label for="html">HTML Code or String to Find:</label>
@@ -45,8 +42,81 @@
       </div>
     </div>
   </div>
-  <script type="text/javascript">/*script.min.js*/
-  const e=document.getElementById("form"),t=document.getElementById("results"),o=document.getElementById("advanced_options"),n=document.getElementById("advanced_options_container");e.addEventListener("submit",(e=>{e.preventDefault();const r=document.getElementById("base_url").value,a=document.getElementById("html").value;if(!r||!a)return alert("Please provide a base URL and HTML.");const i=document.getElementById("conversion_type").value,l=document.getElementById("detect_broken_links").checked,c=document.getElementById("identify_alternative_links").checked,s=document.getElementById("optimize_html").checked,u={conversionType:i,detectBrokenLinks:l,identifyAlternativeLinks:c,optimizeHtml:s};searchWebsite(r,a,u)}));const searchWebsite=(e,t,o)=>{const n=new XMLHttpRequest;n.open("GET",e),n.setRequestHeader("Content-Type","text/html"),n.onload=()=>{if(200===n.status){const e=n.responseText,o=new DOMParser,i=o.parseFromString(e,"text/html"),r=i.querySelectorAll("body *");r.forEach((e=>{const n=e.textContent,l=new RegExp(searchString,"g"),c=n.match(l);if(c){const o=e.parentElement,a=o.innerHTML,s=a.replace(l,`<mark>${searchString}</mark>`),u=n.substring(0,n.indexOf(searchString)),d=n.substring(n.indexOf(searchString)+searchString.length);console.log(`URL: ${window.location.href}`),console.log(`Before: ${u}`),console.log(`String: ${searchString}`),console.log(`After: ${d}`),console.log(`HTML: ${s}`)}}))}else console.error("Error: "+n.statusText)},n.send()};o.addEventListener("change",(e=>{n.style.display=e.target.checked?"block":"none"}));
+
+  <script>
+    "pages.github.com" === window.location.hostname && document.querySelector("base").setAttribute("href", "/String-Sleuth/");
+
+    const form = document.getElementById("form");
+    const advancedOptionsContainer = document.getElementById("advanced_options_container");
+
+    form.addEventListener("submit", (e) => {
+      e.preventDefault();
+
+      const baseUrl = document.getElementById("base_url").value;
+      const html = document.getElementById("html").value;
+
+      if (!baseUrl || !html) {
+        alert("Please provide a base URL and HTML.");
+        return;
+      }
+
+      const conversionType = document.getElementById("conversion_type").value;
+      const detectBrokenLinks = document.getElementById("detect_broken_links").checked;
+      const identifyAlternativeLinks = document.getElementById("identify_alternative_links").checked;
+      const optimizeHtml = document.getElementById("optimize_html").checked;
+
+      searchWebsite(baseUrl, html, {
+        conversionType,
+        detectBrokenLinks,
+        identifyAlternativeLinks,
+        optimizeHtml,
+      });
+    });
+
+    const searchWebsite = (baseUrl, html, options) => {
+      const xhr = new XMLHttpRequest();
+      xhr.open("GET", baseUrl);
+      xhr.setRequestHeader("Content-Type", "text/html");
+      xhr.onload = function () {
+        if (xhr.status === 200) {
+          const response = xhr.responseText;
+          const parser = new DOMParser();
+          const doc = parser.parseFromString(response, "text/html");
+
+          const elements = doc.querySelectorAll("body *");
+          elements.forEach((element) => {
+            const textContent = element.textContent;
+            const regex = new RegExp(html, "g");
+
+            if (textContent.match(regex)) {
+              const htmlWithHighlight = element.parentElement.innerHTML.replace(
+                html,
+                `<mark>${html}</mark>`
+              );
+              const textBefore = textContent.substring(0, textContent.indexOf(html));
+              const textAfter = textContent.substring(
+                textContent.indexOf(html) + html.length
+              );
+
+              console.log(`URL: ${window.location.href}`);
+              console.log(`Before: ${textBefore}`);
+              console.log(`String: ${html}`);
+              console.log(`After: ${textAfter}`);
+              console.log(`HTML: ${htmlWithHighlight}`);
+            }
+          });
+        } else {
+          console.error("Error: " + xhr.statusText);
+        }
+      };
+      xhr.send();
+    };
+
+    advancedOptions.addEventListener("change", (e) => {
+      e.target.checked
+        ? (advancedOptionsContainer.style.display = "block")
+        : (advancedOptionsContainer.style.display = "none");
+    });
   </script>
 </body>
 </html>
