--- a/Dream-Interpreter.html
+++ b/Dream-Interpreter.html
@@ -7,6 +7,9 @@
   <script type="module">
     import tensorflowtfjs from 'https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@4.17.0/+esm'
   </script>
+  <script type="module">
+import tensorflowtfjsCore from 'https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-core@4.17.0/+esm'
+</script>
 </head>
 <body>
 <script>// Get the dark mode toggle button
