--- a/Dream-Interpreter.html
+++ b/Dream-Interpreter.html
@@ -13,6 +13,9 @@ import tensorflowtfjsCore from 'https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-co
 <script type="module">
 import tensorflowtfjsBackendWasm from 'https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-backend-wasm@4.17.0/+esm'
 </script>
+<script type="module">
+import tensorflowtfjsTflite from 'https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-tflite@0.0.1-alpha.10/+esm'
+</script>
 </head>
 <body>
 <script>// Get the dark mode toggle button
