--- a/Dream-Interpreter.html
+++ b/Dream-Interpreter.html
@@ -16,6 +16,9 @@ import tensorflowtfjsBackendWasm from 'https://cdn.jsdelivr.net/npm/@tensorflow/
 <script type="module">
 import tensorflowtfjsTflite from 'https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-tflite@0.0.1-alpha.10/+esm'
 </script>
+<script type="module">
+import tensorflowtfjsNode from 'https://cdn.jsdelivr.net/npm/@tensorflow/tfjs-node@4.17.0/+esm'
+</script>
 </head>
 <body>
 <script>// Get the dark mode toggle button
